# libval

./: .bazelrc  CMakeLists.txt  README.md  WORKSPACE
val/: BUILD  holder.h  is_ref.h  place_holder.h  type_traits.h  val.h  value.cc  value.h  value_base.cc  value_base.h  value_cast.cc  value_cast.h  value_holder.h  value_test.cc
val/core/: BUILD  CMakeLists.txt  base_holder.h  holder.h  value.cc  value.h  value_cast.cc  value_cast.h  value_holder.h
val/test/: BUILD  CMakeLists.txt  value_test.cc
